--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/pubsub": "^4.3.3",
+    "@prisma/client": "^5.11.0",
+    "chart.js": "^4.4.2",
     "next": "14.1.4",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-iframe": "^1.8.5"
+    "react-iframe": "^1.8.5",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/node": "^20",
