--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/pubsub": "^4.3.3",
+    "@google-cloud/storage": "^7.9.0",
     "@prisma/client": "^5.11.0",
     "chart.js": "^4.4.2",
     "next": "14.1.4",
